# physana

./: .bumpversion.cfg  .coveragerc  .gitignore  README.md  envsetup.sh  pyproject.toml  pytest.ini  setup.py
configs/intNote/: table-fakeVR.py
configs/main/v2/: do_unfold.py
configs/main/v3/: build_histograms.py  do_unfold.py
configs/main/v4/: build_histograms.py  calculate_fakes.py  study_xsec_lepton.py
configs/main/v5/: derive_correction.py  electron_style.json  plot_reco.py  plot_response.py  style_average.json
configs/main/v6b/: README.md  build_histograms.py  derive_basic_unfolding_uncertainty.py  do_wjets_scaling_new_hidden.py
configs/studies/: BJetVeto.py  unfolding_metrics.py
configs/studies/run2_data_driven/: compute_sys.py  do_unfold.py  explore_plots.py  hist_to_num_table.py  lepton_xsec.py  plot_2D.py  plot_reco.py  study_CR_purity.py  study_xsec_generators.py  table.py
configs/tables/: control_regions.py
docs/: api.rst  conf.py  index.rst
example/: create_syst_band.py  do_bootstrap_unfold.py  unfold.py
example_configs/intNote/: plot_reco.py  table-sr.py
example_configs/main/v2/: build_histograms.py  calculate_fakes.py
example_configs/main/v3/: calculate_fakes.py
example_configs/main/v4/: do_unfold.py  explore_plots.py  (+3 more)
example_configs/plots/: plots_tfs.py
example_configs/studies/: ControlRegions.py  TopCRShape.py  build_systematics.py  dijets_closure.py  dijets_prep.py  run2_eventlevel_fakes.py  run2_prep.py
example_configs/tables/: table_example.py
src/collinearw/: __init__.py  configMgr.py  core.py  histMaker.py  histManipulate.py  jitfunc.py  plotMaker.py  run_HistMaker.py  run_PlotMaker.py  serialization.py  tableMaker.py  utils.py  version.py  view.py
src/physana/: __init__.py  browser.py  histManipulate.py  plotMaker.py  run_PlotMaker.py  utils.py
tests/: conftest.py  test_cli.py  test_configMgr.py  test_configMgr_duplication.py  test_configMgr_swap.py  test_configMgr_systematics.py  test_core_filter.py  test_core_histogram_operation.py  test_core_process_set.py  test_core_region_operation.py  test_hierarchy.py  test_histmanipulate_subtract_mc.py  test_histogram.py  test_histogram_bin_assignment.py  test_histogram_filter.py  test_process.py  test_process_set.py  test_region.py  test_strategies.py  test_xsec_sumw.py
(+179 files in other folders)
